--- a/portal/templates/portal/error.html
+++ b/portal/templates/portal/error.html
@@ -1,3 +1,5 @@
 {% extends 'portal/base.html' %}
 {% block title %} {{title}} {% endblock %}
-{% block body %} {{message}} {% endblock %}
+{% block body %}
+    <p>{{error}}</p> 
+{% endblock %}
