--- a/portal/static/portal/style.css
+++ b/portal/static/portal/style.css
@@ -1,106 +1,248 @@
-.navbar{
-    border-radius: 0;
+html {
+	background: white;
+	font-size: 10pt;
+}
+label {
+	display: block;
+	color: #999;
+}
+.cf:before,
+.cf:after {
+    content: ""; 
+    display: table;
 }
 
-.navbar-brand{
-    font-family: 'Righteous', cursive;
+.cf:after {
+    clear: both;
 }
-
-.nav li  {
-    font-family: 'Righteous', cursive;
-    font-size: 1.8em !important
-    color: white !important;
+.cf {
+    *zoom: 1;
 }
-
+:focus {
+	outline: 0;
+}
+.loginform {
+	width: 270px;
+	margin: 50px auto;
+	margin-right: 150px;
+	position: relative;
+	padding: 25px;
+	background-color: rgba(250,250,250,0.5);
+	border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
+    			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.loginform ul {
+	padding: 0;
+	margin: 0;
+	
+}
+.loginform li {
+	display: inline;
+	float: left;
+	margin-top:5px;
+}
+.loginform input:not([type=submit]) {
+	width: 220px;
+	padding: 5px;
+	margin-right: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	border-radius: 3px;
+	box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 
+				0px 1px 0px 0px rgba(250, 250, 250, 0.5) ;
+}
+.loginform input[type=submit] {
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	background: #64c8ef; /* Old browsers */
+	background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#64c8ef), color-stop(100%,#00a2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #64c8ef 0%,#00a2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
+	color: #fff;
+	padding: 5px 15px;
+	margin-right: 0;
+	margin-top: 15px;
+	border-radius: 3px;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+}
+.registerform{
+	width: 270px;
+	margin: 50px auto;
+	margin-right: 150px;
+	position: relative;
+	padding: 25px;
+	background-color: rgba(250,250,250,0.5);
+	border-radius: 5px; 
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
+    			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.registerform ul {
+	padding: 0;
+	margin: 0;
+	
+}
+.registerform li {
+	display: inline;
+	float: left;
+	margin-top:5px;
+}
+.registerform input:not([type=submit]) {
+	width: 220px;
+	padding: 5px;
+	margin-right: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	border-radius: 3px;
+	box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 
+				0px 1px 0px 0px rgba(250, 250, 250, 0.5) ;
+}
+.registerform input[type=submit] {
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	background: #64c8ef; /* Old browsers */
+	background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#64c8ef), color-stop(100%,#00a2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #64c8ef 0%,#00a2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
+	color: #fff;
+	padding: 5px 15px;
+	margin-right: 0;
+	margin-top: 15px;
+	border-radius: 3px;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+}
+.add_a_lock{
+	width: 270px;
+	margin: 50px auto;
+	margin-right: 150px;
+	position: relative;
+	padding: 25px;
+	background-color: rgba(250,250,250,0.5);
+	border-radius: 5px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
+    			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+}
+.add_a_lock ul {
+	padding: 0;
+	margin: 0;
+	
+}
+.add_a_lock li {
+	display: inline;
+	float: left;
+	margin-top:5px;
+}
+.add_a_lock input:not([type=submit]) {
+	width: 220px;
+	padding: 5px;
+	margin-right: 10px;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	border-radius: 3px;
+	box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 
+				0px 1px 0px 0px rgba(250, 250, 250, 0.5) ;
+}
+.add_a_lock input[type=submit] {
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	background: #64c8ef; /* Old browsers */
+	background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#64c8ef), color-stop(100%,#00a2e2)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #64c8ef 0%,#00a2e2 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
+	color: #fff;
+	padding: 5px 15px;
+	margin-right: 0;
+	margin-top: 15px;
+	border-radius: 3px;
+	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+}
+.navbar {
+	margin-bottom: 0;
+	border-radius: 0;
+}
 .navbar-default {
-  background-color: #4799e8;
-  border-color: #338fe6;
+	background-color: #3C89BB;
+	border-color: #3E6F9D;
+	font-family: Indie Flower;
+	font-size: 18px;
+}
+.navbar-nav li a {
+	line-height: 24px;
 }
 .navbar-default .navbar-brand {
-  color: #ffffff;
+	color: #ECF0F1;
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: #1976cc;
+	color: #7DADD4;
 }
 .navbar-default .navbar-text {
-  color: #ffffff;
+	color: #ECF0F1;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #ffffff;
+	color: #ECF0F1;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #1976cc;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu {
-  background-color: #4799e8;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
-  color: #ffffff;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
-.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
-  color: #1976cc;
-  background-color: #338fe6;
-}
-.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
-  background-color: #338fe6;
-}
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-  color: #1976cc;
-  background-color: #338fe6;
+	color: #7DADD4;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #1976cc;
-  background-color: #338fe6;
+	color: #7DADD4;
+	background-color: #3E6F9D;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
-  color: #1976cc;
-  background-color: #338fe6;
+	color: #7DADD4;
+	background-color: #3E6F9D;
 }
 .navbar-default .navbar-toggle {
-  border-color: #338fe6;
+	border-color: #3E6F9D;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-  background-color: #338fe6;
+	background-color: #3E6F9D;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #ffffff;
+	background-color: #ECF0F1;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #ffffff;
+	border-color: #ECF0F1;
 }
 .navbar-default .navbar-link {
-  color: #ffffff;
+	color: #ECF0F1;
 }
 .navbar-default .navbar-link:hover {
-  color: #1976cc;
+	color: #7DADD4;
+}
+@media (max-width: 767px) {
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
+		color: #ECF0F1;
+	}
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
+	.navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
+		color: #7DADD4;
+	}
+	.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
+	.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
+	.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
+		color: #7DADD4;
+		background-color: #3E6F9D;
+	}
 }
 
-@media (max-width: 767px) {
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #ffffff;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
-  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #1976cc;
-  }
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
-  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #1976cc;
-    background-color: #338fe6;
-  }
-}
 
 .your-icon {
     position: relative;
@@ -137,6 +279,32 @@
     width: 128px;
     height: 128px;
 }
-.form-horizontal{
-	width : 500px;
-}
+/* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+    .row.content {height: 1000px}
+    
+    .indent {
+      background-color: white;
+      height: 100%;
+      width: 50px;     }
+    /* Set gray background color and 100% height */
+    .sidenav {
+      width: 270px;
+      background-color: white;
+      height: 100%;
+    }
+    .noname {
+	  padding: 0;
+      width: 700px;
+      background-color:white;
+      height: 100%;
+	}
+    
+    /* On small screens, set height to 'auto' for sidenav and grid */
+    @media screen and (max-width: 767px) {
+      .sidenav {
+        width:500px;
+        height: auto;
+        padding: 15px;
+      }
+      .row.content {height:auto;}
+    }
