--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -1,12 +1,25 @@
 {% extends 'portal/base.html' %}
-{% block title %} My Locks {% endblock %}
-{% block body %}
+{% block title %}Home{% endblock %}
 
-    {% if message %}
-        <p> {{message}} </p>
+{% block body %}
+ <!-- Display error in case there is one -->
+    {% if '{{error}}' %}
+        <div class="col-sm-offset-2 col-sn-10">
+            <p> {{error}} </p>
+            <br>
+        </div>
     {% endif %}
-    
-    {% if object_list %}
+	<div class="container-fluid text-center">
+		<div class="row content">
+			<div class="col-sm-1 indent">
+		</div>
+    <div class="col-sm-2 sidenav">
+       <a href="{% url 'portal:profile' %}">
+             <span class="glyphicon glyphicon-profile" aria-hidden="true"></span> {{ user.first_name }} {{ user.username }}
+       </a>
+    </div>
+	<div class="col-sm-6 noname">
+	{% if object_list %}
         <table style="width:40%" align="center" border="0">
             {% for iterator in object_list %}
                 <tr width="80%">
@@ -46,6 +59,30 @@
             {% endfor %}
         </table>
     {% else %}
-        <h1> No Lockies ! </h1>
+        <h1> No Locks ! :( </h1>
     {% endif %}
+	</div>
+	<div class="col-sm-10 sidenav">
+	<!-- Add Lock Form -->
+   <form class="add_a_lock cf" action="{% url 'portal:add-lock' %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+		<ul>
+				<li>
+					<label for="lockname">Give it a nickname</label>
+					<input type="lockname" name="lockname" placeholder="The best lock ever"  required>
+				</li>
+				<li>
+					<label for="lockcode">Lock's inner ID</label>
+					<input type="lockcode" name="lockcode" placeholder="Inner ID" required></li>
+				<li>
+					<input type="submit" class="btn btn-success" value="Add the lock">
+				</li>
+			</ul>
+    
+    </form>
+	</div>
+  </div>
+</div>
+	
 {% endblock %}
+	
