--- a/portal/templates/portal/about.html
+++ b/portal/templates/portal/about.html
@@ -1,8 +1,10 @@
 {% extends 'portal/base.html' %}
 {% block title %} About {% endblock %}
 {% block body %}
+<div style="padding-left: 35px">
     <p> Glimpse Team </p>
     <p> For IT 2016 Edition </p>
+</div>
     <!-- JOIN THE DARKSIDE
             _,.-Y  |  |  Y-._
         .-~"   ||  |  |  |   "-.
@@ -25,4 +27,5 @@
          .-^--r-^-.   .-^--r-^-.
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   -->
+  
 {% endblock %}
