--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -2,19 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
         <title> {% block title %} Lockee {% endblock %}</title>
         {% load staticfiles %}
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-        <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="{% static 'portal/normalize.css' %}"/>
         <link rel="stylesheet" type="text/css" href="{% static 'portal/style.css' %}"/>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <link href="https://a.slack-edge.com/1d9c/style/libs/lato-1-compressed.css" rel="stylesheet" type="text/css" crossorigin="anonymous">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
-    <body align="center">
-        <nav class="navbar navbar-default">
+    <body>
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container-fluid">
-
                 <!-- NavBar Declaration -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
@@ -25,26 +26,28 @@
                 </div>
 
                 <!-- Nav Bar Items -->
-                <div class="collapse navbar-collapse" id="topNavBar">
+                <div id="topNavBar">
+                    <ul class="nav navbar-logo">
+                        <li>
+                            Lockee
+                        </li>
+                    </ul>
                     <!-- Left-sided navbar items -->
                     <ul class="nav navbar-nav">
-                        {% if user.is_authenticated %}
                         <!-- Logged-in user's locks -->
                         <li class="">
                             <a href="{% url 'portal:home' %}">
                                 <span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp; Home
                             </a>
                         </li>
-                        {% endif %}
                     </ul>
                     <!-- Right-sided navbar items -->
                     <ul class="nav navbar-nav navbar-right">
-                        <!-- Contact us -->
-			
+                        
 						<!-- About us ^_^ -->
                         <li>
                             <a href="{% url 'portal:about' %}">
-                                <span aria-hidden="true"></span>&nbsp; About
+                                <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>&nbsp; About
                             </a>
                         </li>
                         {% if user.is_authenticated %}
@@ -65,6 +68,7 @@
                 </div>
             </div>
         </nav>
-        {% block body %} {% endblock %}
+        {% block body %} 
+        {% endblock %}
     </body>
 </html>
