--- a/portal/static/portal/style.css
+++ b/portal/static/portal/style.css
@@ -1,6 +1,13 @@
+html, body {
+   margin:0;
+   padding:0;
+   height:100%;
+   overflow-y: hidden;
+}
 html {
 	background: white;
 	font-size: 10pt;
+	margin-top: 72px;
 }
 label {
 	display: block;
@@ -23,8 +30,9 @@ label {
 }
 .loginform {
 	width: 270px;
-	margin: 50px auto;
-	margin-right: 150px;
+	margin: 0 auto;
+	margin-right: 15px;
+	margin-bottom: 15px;
 	position: relative;
 	padding: 25px;
 	background-color: rgba(250,250,250,0.5);
@@ -71,8 +79,8 @@ label {
 }
 .registerform{
 	width: 270px;
-	margin: 50px auto;
-	margin-right: 150px;
+	margin: 5px auto;
+	margin-right: 15px;
 	position: relative;
 	padding: 25px;
 	background-color: rgba(250,250,250,0.5);
@@ -94,7 +102,6 @@ label {
 .registerform input:not([type=submit]) {
 	width: 220px;
 	padding: 5px;
-	margin-right: 10px;
 	border: 1px solid rgba(0, 0, 0, 0.3);
 	border-radius: 3px;
 	box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1), 
@@ -109,7 +116,6 @@ label {
 	background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
 	background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  #64c8ef 0%,#00a2e2 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
 	color: #fff;
 	padding: 5px 15px;
 	margin-right: 0;
@@ -123,7 +129,7 @@ label {
 	position: relative;
 	padding: 25px;
 	background-color: rgba(250,250,250,0.5);
-	border-radius: 5px;
+    border-radius: 5px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
     			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
     border: 1px solid rgba(0, 0, 0, 0.3);
@@ -158,10 +164,13 @@ label {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
 	color: #fff;
 	padding: 5px 15px;
-	margin-right: 0;
-	margin-top: 15px;
+	margin-top: 10px;
+	margin-left: 55px;
 	border-radius: 3px;
 	text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+}
+.add_a_lock img[type=switch] { 
+	margin-left: 20px;
 }
 .navbar {
 	margin-bottom: 0;
@@ -170,8 +179,9 @@ label {
 .navbar-default {
 	background-color: #3C89BB;
 	border-color: #3E6F9D;
-	font-family: Indie Flower;
+	font-family: Slack-Lato,appleLogo,sans-serif;
 	font-size: 18px;
+	font-weight: bold;
 }
 .navbar-nav li a {
 	line-height: 24px;
@@ -224,6 +234,18 @@ label {
 }
 .navbar-default .navbar-link:hover {
 	color: #7DADD4;
+}
+.navbar-logo {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    font-family: Slack-Lato,appleLogo,sans-serif;
+    font-weight: bold;
+    font-size: 28px;
+    color: white;
+    text-align: center;
+    margin:0 auto;
+    margin-top: 5px;
 }
 @media (max-width: 767px) {
 	.navbar-default .navbar-nav .open .dropdown-menu > li > a {
@@ -288,68 +310,231 @@ label {
     .indent {
       background-color: white;
       height: 100%;
-      width: 3%;     }
-    /* Set gray background color and 100% height */
-    .sidenav {
-      width: 20%;
-      background-color: white;
-      height: 10%;
-	  margin: 25px auto;
-	  position: relative;
-	  padding: 25px;
-	  background-color: rgba(250,250,250,0.5);
-	  border-radius: 5px;
-      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
-    			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
-      border: 1px solid rgba(0, 0, 0, 0.3);
-}
-	.last{
-	  width: 20%;
-      background-color:white;
-      height: 10%;
-	  margin: 25px auto;
-	  position: relative;
-	  padding: 25px;
-	
+      width: 200px;
+      position: relative;
+      float:left;
     }
+	
     .noname {
-      width: 50%;
+      width: 725px;
       background-color:white;
-      height: 50%;
+      height: 100%;
 	  margin: 25px auto;
-	  position: relative;
-	  padding: 25px;
-	  background-color: rgba(250,250,250,0.5);
 	  border-radius: 5px;
       box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
     			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
       border: 1px solid rgba(0, 0, 0, 0.3);
-      vertical-align: middle;
-}
+      overflow-y: auto;
+      float: left;
+	}
+	
+	.sidenav {
+      width: 280px;
+      background-color: white;
+      margin: 25px auto;
+	  margin-right: 15px;
+	  margin-left: 20px;
+	  padding: 10px;
+	  border-radius: 5px;
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
+    			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      text-align: left;
+      float: left;
+	}
+	
+	.last{
+	  width: 270px;
+      background-color: white;
+	  margin-left: 15px;
+	  margin-right: 20px;
+	  float: left;
+    }
+    
+    #content {
+	width: 1350px;
+	height: 750px;
+	margin: 0 auto;
+	padding: 0px 0px 0px 0px;
 	}
     
     /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        width:10px;
+    @media screen and (max-width: 1000px) {
+      .indent{
+      	width:auto;
         height: auto;
-        padding: 15px;
       }
-      .row.content {height:auto;}
+      new{
+      	width:auto;
+        height: auto;
+      	
+      }
+      last{
+      	width:auto;
+        height: auto;
+      }
     }
     
-.center {
+.outer-div {
+	margin: 0 auto;
+    width: 100%;
+    height: 100%;
+}
+.inner-div {
     margin: 0 auto;
     width: 80%;
+    height: 100%;
 }
-.row-centered {
-    text-align:center;
+.upper_rect{
+	background-color: #4799E8;
+	width: auto;
+	height: 96px;
 }
-.col-centered {
-    display:inline-block;
-    float:none;
-    /* reset the text-align */
-    text-align:left;
-    /* inline-block space fix */
-    margin-right:-4px;
+p.small{
+	line-height: 120%;}
+.share{
+	 width: 21%;
+      background-color: white;
+      height: 20%;
+	  margin: 25px auto;
+	  position: relative;
+	  border-radius: 5px;
+      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2), 
+    			inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
+      border: 1px solid rgba(0, 0, 0, 0.3);
+      text-align: center ;
+}
+.glyphicon-remove:hover {
+	color: red;
+}
+.glyphicon-remove{
+	float:right;
+}
+.nickname-width{
+	width:500px;
+}
+hr.style {
+    border: 0;
+    height: 20px; /* Firefox... */
+    box-shadow: inset 0 20px 20px -20px rgba(0, 0, 0, 0.5);
+}
+hr.style:after {  /* Not really supposed to work, but does */
+    content: "\00a0";  /* Prevent margin collapse */
+}
+hr.bottom-style {
+    border: 0;
+    height: 20px; /* Firefox... */
+    margin: 0px;
+    box-shadow: inset 0 -20px 20px -20px rgba(0, 0, 0, 0.5);
+}
+hr.bottom-style:after {  /* Not really supposed to work, but does */
+    content: "\00a0";  /* Prevent margin collapse */
+}
+h1{
+	font-size:2.5rem;
+	line-height:2.5rem;
+	letter-spacing:-1px;
+	color: #555459;
+	font-family: Slack-Lato,appleLogo,sans-serif;
+	font-weight: bold;
+	margin-top: 15px;
+	margin-bottom: 10px;
+	text-align: center;
+}
+.nickname {
+	font-size:2rem;
+	line-height:2.5rem;
+	letter-spacing:-1px;
+	color: #555459;
+	font-family: Slack-Lato,appleLogo,sans-serif;
+	margin-bottom: 5px;
+	float: left;
+}
+.error {
+	font-size:2rem;
+	line-height:2.5rem;
+	letter-spacing:-1px;
+	color: #ff0000;
+	font-family: Slack-Lato,appleLogo,sans-serif;
+	font-weight: bold;
+	text-align: center;
+}
+.switch {
+  position: relative;
+  margin-top: 5px;
+  height: 26px;
+  width: 120px;
+  background: #404040;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3), 0 1px rgba(255, 255, 255, 0.1);
+}
+.switch-label {
+  position: relative;
+  z-index: 2;
+  float: left;
+  width: 58px;
+  line-height: 26px;
+  font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
+  font-size: 11px;
+  font-weight: normal;
+  color: rgba(255, 255, 255, 0.35);
+  text-align: center;
+  padding-left: 5px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
+  cursor: pointer;
+}
+.switch-label:active {
+  font-weight: bold;
+}
+.switch-label-off {
+  padding-left: 2px;
+}
+.switch-label-on {
+  padding-right: 2px;
+}
+.switch-input {
+  display: none;
+}
+.switch-input:checked + .switch-label {
+  font-weight: bold;
+  font-size: 11px;
+  color: rgba(0, 0, 0, 0.65);
+  text-shadow: 0 1px rgba(255, 255, 255, 0.25);
+  -webkit-transition: 0.15s ease-out;
+  -moz-transition: 0.15s ease-out;
+  -o-transition: 0.15s ease-out;
+  transition: 0.15s ease-out;
+}
+.switch-input:checked + .switch-label-on ~ .switch-selection {
+  left: 60px;
+  /* Note: left: 50% doesn't transition in WebKit */
+}
+.switch-selection {
+  display: block;
+  position: absolute;
+  z-index: 1;
+  top: 2px;
+  left: 2px;
+  width: 58px;
+  height: 22px;
+  background: #65bd63;
+  border-radius: 3px;
+  background-image: -webkit-linear-gradient(top, #9dd993, #65bd63);
+  background-image: -moz-linear-gradient(top, #9dd993, #65bd63);
+  background-image: -o-linear-gradient(top, #9dd993, #65bd63);
+  background-image: linear-gradient(to bottom, #9dd993, #65bd63);
+  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px rgba(255, 255, 255, 0.5), 0 0 2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: left 0.15s ease-out;
+  -moz-transition: left 0.15s ease-out;
+  -o-transition: left 0.15s ease-out;
+  transition: left 0.15s ease-out;
+}
+.switch-blue .switch-selection {
+  background: #3aa2d0;
+  background-image: -webkit-linear-gradient(top, #4fc9ee, #3aa2d0);
+  background-image: -moz-linear-gradient(top, #4fc9ee, #3aa2d0);
+  background-image: -o-linear-gradient(top, #4fc9ee, #3aa2d0);
+  background-image: linear-gradient(to bottom, #4fc9ee, #3aa2d0);
 }
