--- a/portal/templates/portal/base.html
+++ b/portal/templates/portal/base.html
@@ -34,9 +34,8 @@
                     </ul>
                     <!-- Left-sided navbar items -->
                     <ul class="nav navbar-nav">
-                        <!-- Logged-in user's locks -->
                         <li class="">
-                            <a href="{% url 'portal:home' %}">
+                            <a href="{% url 'portal:welcome' %}">
                                 <span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp; Home
                             </a>
                         </li>
