--- a/portal/templates/portal/about.html
+++ b/portal/templates/portal/about.html
@@ -1,10 +1,6 @@
 {% extends 'portal/base.html' %}
 {% block title %} About {% endblock %}
 {% block body %}
-<div style="padding-left: 35px">
-    <p> Glimpse Team </p>
-    <p> For IT 2016 Edition </p>
-</div>
     <!-- JOIN THE DARKSIDE
             _,.-Y  |  |  Y-._
         .-~"   ||  |  |  |   "-.
@@ -27,5 +23,50 @@
          .-^--r-^-.   .-^--r-^-.
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   -->
+{% load static %}
+<!--<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators 
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+    </ol>
+
+    <!-- Wrapper for slides 
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="{% static 'portal/' %}" alt="Image" width="12px" height="14px">
+        <div class="carousel-caption">
+          <h3></h3>
+          <p></p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="http://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+        <div class="carousel-caption">
+          <h3></h3>
+          <p></p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Left and right controls 
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>-->
+<div class="container text-center">
+  
+  <p class="login_text"><b>Lockee - the cheapest and smartest lock</b>
+                        <br>
+                       You can control your lock from 
+anywhere with only one click so you don't have to take care of keys anymore. 
+                      <br>With Lockee, life gets better.</p>
+</div>
   
 {% endblock %}
