--- a/portal/templates/portal/home.html
+++ b/portal/templates/portal/home.html
@@ -8,7 +8,6 @@
         {{error}}
     </div>
     {% endif %} {% load static %}
-
     <div id="content">
         <div class="sidenav">
             <img class="profile-pic" style="float:left" src="{% static 'portal/profile.jpg' %}" alt="Profile Image" width="64px" height="64px">
@@ -24,7 +23,7 @@
         </div>
         <div class="noname">
             {% if object_list %}
-            <h1>Your Lockees</h1> {% for iterator in object_list %}
+            <h1 align="center">Your Locks</h1> {% for iterator in object_list %}
             <div style="height:92px">
                 <hr class="style">
                 <div class="nickname-width" style="margin-top:-25px;width:100%">
@@ -36,29 +35,56 @@
                 <div style="width:100%">
 
                     <!-- Share Button -->
-                    <form style="float:left;padding-left:25px" action="{% url 'portal:generate' iterator.nickname %}" method="get">
+                    <form style="float:left;padding-left:25px" action="{% url 'portal:generate-static' iterator.nickname %}" method="get">
                         {% csrf_token %}
                         <input type="hidden">
                         <button type="submit" class="btn btn-primary btn-md"> Share </button>
                     </form>
 
                     <!-- Open Close Door -->
-                    {% if iterator.abs_lock.is_opened %}
-                    <form style="float:left;padding-left:25px" action="{% url 'portal:portal-mechanic' iterator.abs_lock.lock_inner_id iterator.nickname %}" method="get">
+                    {% if iterator.bindedAbsoluteLock.isOpened %}
+                    <form style="float:left;padding-left:25px" action="{% url 'portal:portal-mechanic' iterator.bindedAbsoluteLock.lockInnerID iterator.nickname %}" method="post">
                         {% csrf_token %}
                         <input type="hidden">
                         <button type="submit" class="btn btn-primary btn-md"> Lock </button>
                     </form>
                     {% else %}
-                    <form style="float:left;padding-left:25px" action="{% url 'portal:portal-mechanic' iterator.abs_lock.lock_inner_id iterator.nickname %}" method="get">
+                    <form style="float:left;padding-left:25px" action="{% url 'portal:portal-mechanic' iterator.bindedAbsoluteLock.lockInnerID iterator.nickname %}" method="post">
                         {% csrf_token %}
                         <input type="hidden">
                         <button type="submit" class="btn btn-danger btn-md"> Unlock </button>
                     </form>
                     {% endif %}
 
+                    <!-- Session share -->
+                    <a class="btn btn-primary btn-md" href="#popup1" style="margin-left:25px;margin-top:-7px">Session Share</a>
+                    <div id="popup1" class="overlay">
+                        <div class="popup">
+                            <h2>Temporary share code:
+                                {% if iterator.sessionShareID %}
+                                    {{iterator.sessionShareID}}
+                                    <h3>Available until {{iterator.sessionExpireReadable}}</h3>
+                                {% else %}
+                                    <h3>Available until ∞</h3>
+                                {% endif %}
+                            </h2>
+                            <a class="close" href="#">&times;</a>
+                            <form class="sharefortime" action="{% url 'portal:generate-session' iterator.nickname %}" method="post">
+                                {% csrf_token %}
+                                <label for "time"><h2>Set the time for the validity of the new code: </h2></label>
+                                <input type="number" name="minutes" class="time" placeholder="Minutes" required>
+                                <input type="number" name="hours" class="time" placeholder="Hours" required>
+                                <input type="number" name="days" class="time" placeholder="Days" required>
+                                <input type="hidden">
+                                <button type="submit" class="btn btn-primary btn-md" style="margin-top:15px"> Generate </button>
+                            </form>
+                            
+                        </div>
+                    </div>
+
+
                     <!-- Share ID -->
-                    <p class="shareID" color="#3385ff"> Share ID : {{iterator.share_id}}</p>
+                    <p class="shareID" color="#3385ff"> Static Share ID : {{iterator.staticShareID}}</p>
                 </div>
             </div>
             {% endfor %}
@@ -97,4 +123,5 @@
         </div>
     </div>
 </div>
+
 {% endblock %}
