--- a/portal/templates/portal/mechanic.html
+++ b/portal/templates/portal/mechanic.html
@@ -1,6 +1,6 @@
 {% extends 'portal/base.html' %}
 
-{% if is_opened %}
+{% if isOpened %}
     <p> Lock is now open </p>
 {% else %}
     <p> Lock is now closed </p>
