--- a/portal/templates/portal/profile.html
+++ b/portal/templates/portal/profile.html
@@ -1,4 +1,4 @@
-{% extends 'portal/base.html' %}
+% extends 'portal/base.html' %}
 {% block title %} Profile {% endblock %}
 {% block body %}
     <p> Hello {{name}} ! </p>
